adicionando botão enviar

--- a/FRONT END/html/exercício_html.html
+++ b/FRONT END/html/exercício_html.html
@@ -23,6 +23,16 @@
 
     <label for="input_senha">Senha</label>
     <input type="password" id="input_senha" placeholder="Senha"/>
+
+    <br />
+    
+    <button type="submit">
+        Cadastrar
+    </button>
+
+    <footer>
+        &copy;Todos os direitos reservados
+    </footer>
     
 </body>
 </html>
